solo falta conectar db

--- a/web/styles/stylesPreins.css
+++ b/web/styles/stylesPreins.css
@@ -9,6 +9,6 @@ form{
 }
 h1{
     text-align: center;
-    background-color: darkslategrey;
+    background-color: rgb(40, 41, 43);
     color: white; 
 }
