--- a/web/styles/stylesPreins.css
+++ b/web/styles/stylesPreins.css
@@ -9,6 +9,9 @@ form{
 }
 h1{
     text-align: center;
-    background-color: rgb(40, 41, 43);
     color: white; 
+}
+body{
+    background-color: rgb(40, 41, 43);
+    color: white;
 }
